# gatelink-contracts

./: .gitignore  Cargo.toml  README.md
contracts/gatelink-core/: Cargo.toml
contracts/gatelink-core/src/: lib.rs  test.rs
